<resources>
    <string name="facebook_app_id">435131427825707</string>
    <string name="facebook_login_schema">fb435131427825707</string>
    <string name="app_name">Weather</string>
    <string name="an_error_happened">An error happened</string>
    <string name="network_error">Error connection</string>
    <string name="e">E</string>
    <string name="n">N</string>
    <string name="w">W</string>
    <string name="s">S</string>
    <string name="ne">NE</string>
    <string name="nw">NW</string>
    <string name="se">SE</string>
    <string name="sw">SW</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="feels_like">Feels like:</string>
    <string name="share">Share</string>
    <string name="show_weather">Show Weather</string>
    <string name="share_with_facebook">Share with facebook</string>
    <string name="share_with_twitter">Share with twitter</string>
    <string name="share_now">Share Now</string>
    <string name="error_saving_weather_story">An error happened while saving story</string>
    <string name="error_getting_saved_weather_stories">Cannot get your history</string>
    <string name="story_saved">Story saved !</string>

</resources>