<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_corners_top">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/share_now"
        android:textColor="@color/black"
        android:textSize="@dimen/fontLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/storyImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareFbBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:stateListAnimator="@null"
        android:text="@string/share_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/fontMedium"
        app:backgroundTint="@color/colorBlue"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/shareTwBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/storyImageView"
        app:layout_constraintTop_toTopOf="@+id/storyImageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareTwBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:stateListAnimator="@null"
        android:text="@string/share_with_twitter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/fontMedium"
        app:backgroundTint="@color/colorBlueSky"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/storyImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/storyImageView"
        app:layout_constraintTop_toBottomOf="@+id/shareFbBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>